--- a/index.html
+++ b/index.html
@@ -8,92 +8,119 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-        <a href="" class="logo">Web<span class="logo-black">Studio</span></a>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link active-link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="#" class="link">Контакты</a></li>
+    <header class="header">
+        <div class="container main-header">
+            <nav class="main-nav">
+            <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link active-link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="#" class="link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="contact-nav list">
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="contact-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-button">Заказать услугу</button>
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="hero-button">Заказать услугу</button>
         </section>
         <section class="section">
-            <h2 hidden>Наши преимущества</h2>
-            <uL class="feature-list list">
-                <li>
-                    <h3 class="title">Внимание к деталям</h3>
-                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="title">Пунктуальность</h3>
-                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="title">Планирование</h3>
-                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="title">Современные технологии</h3>
-                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </uL>
+            <div class="container">
+                <h2 class="visually-hidden">Наши преимущества</h2>
+                <uL class="feature-list list">
+                    <li class="item">
+                        <h3 class="title">Внимание к деталям</h3>
+                        <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li class="item">
+                        <h3 class="title">Пунктуальность</h3>
+                        <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li class="item">
+                        <h3 class="title">Планирование</h3>
+                        <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li class="item">
+                        <h3 class="title">Современные технологии</h3>
+                        <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </uL>
+            </div>
         </section>
-        <section class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li><img src="./images/work-img1.jpg" alt="Разработка web-приложений" width="370"></li>
-                <li><img src="./images/work-img2.jpg" alt="Разработка мобильных приложений" width="370"></li>
-                <li><img src="./images/work-img3.jpg" alt="Создание дизайнов разной сложности" width="370"></li>
-            </ul>
+        <section class="section work">
+            <div class="container">
+                <h2 class="section-title">Чем мы занимаемся</h2>
+                <ul class="list work-list">
+                    <li class="item"><img src="./images/work-img1.jpg" alt="Разработка web-приложений" width="370"></li>
+                    <li class="item"><img src="./images/work-img2.jpg" alt="Разработка мобильных приложений" width="370"></li>
+                    <li class="item"><img src="./images/work-img3.jpg" alt="Создание дизайнов разной сложности" width="370"></li>
+                </ul>
+            </div>
         </section>
-        <section class="section">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="team-list list">
-                <li>
-                    <img src="./images/team-img1.jpg" alt="Игорь Демьяненко- Дизайнер" width="270">
-                    <h3 class="name">Игорь Демьяненко</h3>
-                    <p class="profession">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/team-img2.jpg" alt="Ольга Репина-Frontend разработчик" width="270">
-                    <h3 class="name">Ольга Репина</h3>
-                    <p class="profession">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/team-img3.jpg" alt="Николай Тарасов- Маркетолог" width="270">
-                    <h3 class="name">Николай Тарасов</h3>
-                    <p class="profession">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/team-img4.jpg" alt="Михаил Ермаков-UI Дизайнер" width="270">
-                    <h3 class="name">Михаил Ермаков</h3>
-                    <p class="profession">UI Designer</p>
-                </li>
-            </ul>
+        <section class="section team">
+            <div class="container">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="team-list list">
+                    <li class="item">
+                        <div class="team-img">
+                            <img src="./images/team-img1.jpg" alt="Игорь Демьяненко- Дизайнер" width="270">
+                        </div>
+                        <div class="team-descr">
+                            <h3 class="name">Игорь Демьяненко</h3>
+                            <p class="profession">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="team-img">
+                            <img src="./images/team-img2.jpg" alt="Ольга Репина-Frontend разработчик" width="270">
+                        </div>
+                        <div class="team-descr">
+                            <h3 class="name">Ольга Репина</h3>
+                            <p class="profession">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="team-img">
+                            <img src="./images/team-img3.jpg" alt="Николай Тарасов- Маркетолог" width="270">
+                        </div>
+                        <div class="team-descr">
+                            <h3 class="name">Николай Тарасов</h3>
+                            <p class="profession">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="team-img">
+                            <img src="./images/team-img4.jpg" alt="Михаил Ермаков-UI Дизайнер" width="270">
+                        </div>
+                        <div class="team-descr">
+                            <h3 class="name">Михаил Ермаков</h3>
+                            <p class="profession">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="" class="logo">Web<span class="logo-white">Studio</span></a>
-        <address>
-            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="footer-contacts list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="" class="logo logo-footer">Web<span class="logo-white">Studio</span></a>
+            <address>
+                <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+                <ul class="footer-contacts list">
+                    <li class="bottom"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
